--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
         <img src="https://learn.co/tracks/vfa-training-web-development/core/html-fundamentals/html-album-cover#">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
+        <span></span>
 
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
         
-        <img src="">
+        <img src="https://learn.co/tracks/vfa-training-web-development/core/html-fundamentals/html-album-cover#">
 
       </div>
     </div>
