--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img src="https://learn.co/tracks/vfa-training-web-development/core/html-fundamentals/html-album-cover#">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
-        <span></span>
+        <span>COLUMBIARECORDS.COM</span>
 
         <br>
 
