--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <span>PHARRELLWILLIAMS.COM</span>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-        <img src="https://learn.co/tracks/vfa-training-web-development/core/html-fundamentals/html-album-cover#">
+        <img src="columbia-logo.png">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
         <span>COLUMBIARECORDS.COM</span>
