--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
         
-        <img src="'https://s3.amazonaws.com/learn-verified/sony-logo-logo.png'">
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png">
 
       </div>
     </div>
